# CMakeVulkanImGuiTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
app/: CMakeLists.txt  main.cpp
cmake/: imgui.cmake  project_dependencies.cmake  vulkan.cmake
framework/: CMakeLists.txt  application.cpp  application.hpp  image.hpp  logging.hpp  shader_utils.cpp  shader_utils.hpp  timer.hpp  vulkan_utils.hpp
